--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vite + React</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-  <link rel="stylesheet" href="bower_components/aos/dist/aos.css" />
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" /> -->
+  <!-- <link rel="stylesheet" href="bower_components/aos/dist/aos.css" /> -->
 </head>
 
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
-  <script src="bower_components/aos/dist/aos.js"></script>
+  <!-- <script src="bower_components/aos/dist/aos.js"></script> -->
   <script>
     AOS.init();
   </script>
